--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </p>
         </div>
         <div class="boxcon2 numbersheadline">
-          Foto
+          
           <div class="kostel"></div>
         </div>
       </div>
@@ -69,7 +69,7 @@
       </div>
 
       <div id="experience">
-        <div class="boxexp numbersheadline">Foto <div class="kostel1"></div></div>
+        <div class="boxexp numbersheadline"> <div class="kostel1"></div></div>
         <div class="boxexp numbersheadline">
           <div class="headline"></div>
           Úřad
@@ -101,7 +101,7 @@
             a blechám
           </p>
         </div>
-        <div class="boxwor numbersheadline">Foto <div class="letadlo"></div></div>
+        <div class="boxwor numbersheadline"> <div class="letadlo"></div></div>
       </div>
 
       <div id="container">
