--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="scroll-container">
-      <ul id="containernav">
+      <ul id="containernav" class="animates celay2">
         <li class="boxnav">
           <a href="#">Úvod</a>
         </li>
@@ -27,7 +27,7 @@
         </li>
       </ul>
 
-      <div id="containerwel">
+      <div id="containerwel" class="animate delay1">
         <div class="boxwelcome span01">
           <div class="white">Obec Černouček</div>
           <div class="gray">Ústecký kraj</div>
@@ -41,7 +41,7 @@
         <div class="boxcon"></div>
         <div class="boxcon"></div>
       </div>
-      <div id="container2">
+      <div id="container2" class="animatess delay3">
         <div class="boxcon2 numbersheadline">
           <div class="headline"></div>
           Něco o obci
