--- a/index.html
+++ b/index.html
@@ -110,7 +110,12 @@
       </div>
 
       <div id="contact">
-        <div class="boxcont"></div>
+        <div class="boxcont">
+          Kde se nachazíme:
+          <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="250" id="gmap_canvas" src="https://maps.google.com/maps?q=%C4%8Cernou%C4%8Dek,%20Czech%20Republic&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+          </iframe><a href="https://embedgooglemap.net/124/">123movies party</a><br><style>.mapouter{position:relative;text-align:right;height:250px;width:600px;}</style><a href="https://www.embedgooglemap.net">google maps embed</a>
+            <style>.gmap_canvas {overflow:hidden;background:none!important;height:250px;width:600px;}</style></div></div>
+        </div>
         <div class="boxcont numbersheadline">
           <div class="headline"></div>
           Kontakty
@@ -123,9 +128,9 @@
       </div>
 
       <div id="containerfoot">
-        <div class="boxfo"></div>
-        <div class="boxfo">Všechna práva vyhrazena</div>
-        <div class="boxfo"></div>
+        <footer class="boxfo"></footer>
+        <footer class="boxfo">© Všechna práva vyhrazena 2023</footer>
+        <footer class="boxfo"></footer>
       </div>
     </div>
     <script src="./res/js/main.js"></script>
